<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Ubique Innovation AG <https://www.ubique.ch>
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ SPDX-License-Identifier: MPL-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="?dialogPreferredPadding"
		android:paddingTop="?dialogPreferredPadding"
		android:paddingEnd="?dialogPreferredPadding">

		<TextView
			style="@style/Sample.Text.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_medium"
			android:text="@string/dialog_exposed_title" />

		<TextView
			style="@style/Sample.Text.Light"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_medium"
			android:text="@string/dialog_exposed_input_message" />

		<EditText
			android:id="@+id/input_dialog_date"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="@dimen/spacing_medium"
			android:focusable="false"
			android:foreground="?selectableItemBackground"
			android:inputType="none"
			android:padding="@dimen/spacing_medium"
			tools:hint="10.04.2020" />

		<EditText
			android:id="@+id/input_dialog_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal"
			android:hint="@string/dialog_exposed_code_hint"
			android:inputType="textNoSuggestions|text"
			android:lines="1"
			android:maxLines="1" />

		<TextView
			android:id="@+id/input_dialog_error_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_medium"
			android:textColor="@color/red"
			android:visibility="invisible"
			tools:text="@string/dialog_input_code_error"
			tools:visibility="visible" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="?dialogPreferredPadding"
		android:gravity="end"
		android:orientation="horizontal">

		<Button
			android:id="@+id/input_dialog_negative_button"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_confirm_negative_button" />

		<Button
			android:id="@+id/input_dialog_positive_button"
			style="@style/Widget.MaterialComponents.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_confirm_positive_button" />

	</LinearLayout>
</LinearLayout>